public/stylesheets/style.css
.nav {
  padding-top: 5px;
  padding-bottom: 5px;
  background-color: ;

}

.nav li {
  display: inline;
}

.nav button {
  margin-right: auto;
}

.nav a {
  color: #FFFFFF;
  font-size: 25px;
  font-weight: 900;
  font-family: "Arial Rounded MT", sans-serif, Georgia;
  padding: 15px 18px;
  margin-right: -120px;
  background: rgba(145,163,176, 1);
 
}

.nav a:hover {
  color: #FFFFFF;
  font-size: 25px;
  font-weight: 900;
  font-family: "Arial Rounded MT", sans-serif, Georgia;
  padding: 15px 18px;
  margin-right: -120px;
  background: rgba(145,163,176, 1);
  text-decoration: underline;
 
}

.blackbox {
   background: rgba(0, 0, 0, 0.7);
}

.jumbotron {
  height: auto;
  background-repeat: repeat;
  background-size: auto;
}
.jumbotron a {
  color: #FFFFFF;
  opacity: 1;
  padding-bottom:100px;
  font-size: 100px;
  font-weight: bold;
  padding: 14px 90px;
  font-family: "Arial Rounded MT", sans-serif, Georgia;
  text-decoration: none;
  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}

.jumbotron a:hover {
  color: #91A3B0;
  opacity: 1;
  padding-bottom:100px;
  font-size: 100px;
  font-weight: bold;
  padding: 14px 90px;
  font-family: "Arial Rounded MT", sans-serif, Georgia;
}

.jumbotron .container {
  top:0px;
  bottom: 100000px;
}

.jumbotron .row {
  margin-height: auto;
  margin-width: auto;
  border-style: solid;
  border-color: black;
}
.ingredient-pill {
  border-radius: 24px;
  margin: -0.5em 0.5em 1.5em 0.5em
}

.btn-lg 
{
  background-color: #5D95BD;
  border: none;
}

.jumbotron .box {
  border-radius: 25px;
  background-color: #91A3B0;
  height: auto;
  min-height: 300px;
  width: 45%;
  padding: 0 1em 0 1em;
}

.row {
    margin: 0px
}

.input-group {
  padding:50px 0 25px 0;
}

